UI changes done

--- a/Hippo/UIView/TableViewCell/SupportMessageTableViewCell/SupportMessageTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/SupportMessageTableViewCell/SupportMessageTableViewCell.xib
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SupportMessageTableViewCell" rowHeight="270" id="bH2-JR-QHO" customClass="SupportMessageTableViewCell" customModule="HippoChat" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SupportMessageTableViewCell" rowHeight="270" id="bH2-JR-QHO" customClass="SupportMessageTableViewCell" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="270"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bH2-JR-QHO" id="uCR-8L-K0b">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="269.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="270"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y0x-5w-qls" customClass="So_UIView" customModule="HippoChat" customModuleProvider="target">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y0x-5w-qls" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
                         <rect key="frame" x="43.5" y="24.5" width="65" height="60.5"/>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RFF-lq-dWC">
@@ -101,6 +99,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="bgView" destination="RFF-lq-dWC" id="vc6-Z7-0h6"/>
+                <outlet property="constraint_Height" destination="Lfj-fk-4qy" id="Lq0-Fl-MVJ"/>
                 <outlet property="nameLabel" destination="1aI-bu-mXG" id="cQF-9D-UeI"/>
                 <outlet property="senderImageTraillingConstaints" destination="emm-WA-g8k" id="lyG-Z4-ND1"/>
                 <outlet property="senderImageView" destination="yCk-vg-WaF" id="LTH-Q7-fxb"/>
